@@ -1,3 +1,8 @@
+2014-10-15 David A. Wheeler <dwheeler, at, dwheeler.com>
+	* Common Lisp implementation sweet-expression reader now handles
+	  expressions that end without an EOL.
+	* Common Lisp - add basic ability to print readable expressions.
+
 2014-07-04 David A. Wheeler <dwheeler, at, dwheeler.com>
 	* Version 1.0.4. Fixes regression in guile 2.
 	  Adds other portability tweaks to make it work on more systems.
